# CT-generative-pred

./: .gitignore  AUTHORS.md  LICENSE  README.md  TODO.md  environment-no-build.yml  environment.yml  environment_no_build.yml  pyproject.toml  requirements.in
configs/: eval_3d_vae.yaml  fm_3d_paired.yaml  fm_3d_pretraining.yaml  nlst_large.yaml  nlst_small.yaml  paths.yaml  train_vae_3d.yaml  train_vae_3d_nodule.yaml  unet_2d_cfm.yaml  unet_3d_cfm.yaml  unet_3d_cfm_raw.yaml  vae_3d_model.yaml
docs/: notes.md  parquets_explanations.md  process.md  repo_layout.md
extra_functional_code_files/: combine_csv.py  compute_metrics.py  eval_3D_fm_raw_fast.py  volume_tests.py
metadata/: exam_to_nifti_transformed.pkl  nlst_nodule_tracking.parquet  test_encoded_data_nodule_original_boxes.json  test_raw_data_nodule_original_boxes.json  train_raw_data_nodule_original_boxes.json
output_metrics/: latent_space_eval.csv  metrics_100_small_bbox_updated.csv  metrics_90_percent_full_updated.csv  raw_image_no_bbox.csv
scripts/: eval_2D_fm.py  eval_3D_fm.py  eval_3D_fm_raw.py  eval_3d_vae.py  model_diagram_save.py  nodules_pt_to_parquet.py  pretraining_2D_fm.py  pretraining_3D_fm.py  run_create_parquets.py  save_encoded_images.py  save_mapping.py  save_nodule_cache.py  save_registrations.py  save_small_bboxes.py  save_small_bboxes_encoded.py  train_pairs_2D_fm.py  train_pairs_3D_fm.py  train_vae_3d.py  train_vae_3d_nodules.py
src/CTFM/: __init__.py
src/CTFM/data/: __init__.py  bounding_boxes.py  cache_encoded.py  create_parquets.py  flatten_nodules.py  initial_exam_to_nifti.py  (+2 more)
(+21 files in other folders)
